eks/helm/ingress-map.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-helm
  namespace: jenkins
spec:
  rules:
    - host: jenkins-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
    - host: grafana-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
            path: /
    - host: prometheus-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-server
              servicePort: 80
            path: /
    - host: prometheusam-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-alertmanager
              servicePort: 80
            path: /
    - host: prometheuspg-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-pushgateway
              servicePort: 9091
            path: /
