eks/helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: jenkins-helm
  namespace: jenkins
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - jenkins-helm.parity.evise-nonprod.com
    - grafana-helm.parity.evise-nonprod.com
    - elk-helm.parity.evise-nonprod.com
    #- prometheusam-helm.parity.evise-nonprod.com
    #- prometheuspg-helm.parity.evise-nonprod.com
    secretName: jenkins-cert # < cert-manager will store the created certificate in this secret.
  rules:
    - host: jenkins-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
    - host: grafana-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
            path: /
    - host: elk-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: elastic-stack-kibana
              servicePort: 443
            path: /
    # - host: prometheusam-helm.parity.evise-nonprod.com
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: prometheus-alertmanager
    #           servicePort: 80
    #         path: /
    # - host: prometheuspg-helm.parity.evise-nonprod.com
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: prometheus-pushgateway
    #           servicePort: 9091
    #         path: /
